# BranchFallChangeDetection

./: .gitattributes  README.md  VoxelChangeDetector.py  adtree_archi.R  branches.py  branchrunner.py  change_detection.py  environment.yml  manual.md  pyproject.toml  test3.py  test4.py  tools.py  translation.py  voxelization.py
data/part1/: fallen_branch_data_part1.csv  new_volume_tree_level_data_part1.csv
data/part1/2022/: arbre 2022 10 18.35 ACER-PLATANOIDES.xyz  arbre 2022 73 8.29 ACER-PLATANOIDES-CRIMSON-KING.xyz
data/part1/2022/adtree_qsm3/: 10_paths_out.csv  73_qsm_origins.csv  73_qsm_out.csv  73_tree_data_out.csv  73_true_qsm.csv
data/part1/2023/: arbre 2023 10 18.60 ACER-PLATANOIDES.xyz  arbre 2023 73 8.47 ACER-PLATANOIDES-CRIMSON-KING.xyz
r/: adTree.R  rTwigClass.R
tests/: test_imports.py
