[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchchange"
version = "0.1.0"
description = "Branch-level change detection from multi-temporal tree point clouds + QSM cylinders"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Christopher Scarpone"}]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "open3d>=0.18",
]

[project.scripts]
branchchange = "branchchange.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
